<resources>
    <string name="app_name">Dawn2Dusk</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Strings related to login -->

    <string name="ls1">Dawn</string>
    <string name="ls2">2</string>
    <string name="ls3">Dusk</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_widget_today">Dawn2Dusk Today</string>
    <string name="loctext">Today in India</string>
    <string name="risename">Sunrise</string>
    <string name="setname">Sunset</string>
    <string name="durname">Day Length</string>
    <string name="risedata">05:38 am</string>
    <string name="setdata">06:30 pm</string>
    <string name="durdata">9:00 hrs</string>
    <string name="nic">No Internet Connection!</string>
    <string name="base_url">http://api.sunrise-sunset.org/json?</string>
    <string name="rise_url">https://s27.postimg.org/7kbgtc28z/ic_rice.png</string>
    <string name="set_url">https://s28.postimg.org/ji12zzve5/ic_set.png</string>
    <string name="duration_url">https://s30.postimg.org/iik0jfpjl/ic_dur.png</string>

    <string name="cd_logo">Logo Image</string>
    <string name="cd_login">Login to your Google Account</string>
    <string name="cd_sunrise">Sunrise Icon</string>
    <string name="cd_sunset">Sunset Icon</string>
    <string name="cd_dur">Day Length Icon</string>
    <string name="cd_cdate">Choose a date from calendar</string>
    <string name="cd_nav_image">Profile Image</string>
    <string name="cd_sunrise_icon">Sunrise Icon</string>
    <string name="cd_sunset_icon">Sunset Icon</string>
    <string name="cd_dur_icon">Day Length Icon</string>
    <string name="logout">Logout</string>
    <string name="header_name">Day Length Icon</string>andl
    <string name="header_email">Day Length Icon</string>
    <string name="no_loc">Enable Location Access &amp; Refresh</string>
    <string name="no_ic">No Internet Connection!</string>
    <string name="alert_title">Permission Denied</string>
    <string name="alert_message">Dawn2Dusk needs location access permissions to find the exact Sun Data.</string>
    <string name="alert_positive">Deny</string>
    <string name="alert_negative">Try Again</string>
    <string name="nw_discon">Disconnected. Please re-connect.</string>
    <string name="nw_lost">Network lost. Please re-connect.</string>


</resources>
