<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.com.dawn2dusk.LoginActivity">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:layout_above="@+id/btnlayout">
  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_centerInParent="true">
  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="@dimen/image_size"
      android:scaleType="centerInside"
      android:contentDescription="@string/cd_logo"
      android:src="@drawable/dawn2dusk"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="@dimen/logotext_size"
      android:textColor="@color/lc1"
      android:text="@string/ls1"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="@dimen/logotext_size"
          android:textColor="@color/lc2"
          android:text="@string/ls2"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="@dimen/logotext_size"
          android:textColor="@color/lc3"
          android:text="@string/ls3"/>
    </LinearLayout>
  </LinearLayout>
  </LinearLayout>
  <LinearLayout
      android:id="@+id/btnlayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/colorPrimary"
      android:layout_alignParentBottom="true"
      android:layout_alignParentLeft="true"
      android:layout_alignParentStart="true">
  <com.google.android.gms.common.SignInButton
      android:layout_width="match_parent"
      android:padding="2dp"
      android:contentDescription="@string/cd_login"
      android:id="@+id/googlebutton"
      android:layout_height="@dimen/button_height"></com.google.android.gms.common.SignInButton>
  </LinearLayout>
</RelativeLayout>
