<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swpl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="app.com.dawn2dusk.HomeActivity"
    tools:showIn="@layout/app_bar_home">
<LinearLayout
    android:id="@+id/content_home"
    android:weightSum="5.3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3.3"
        app:cardElevation="2dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:weightSum="4">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">
    <TextView
        android:id="@+id/loctv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loctext"
        android:visibility="invisible"
        android:textSize="@dimen/titlesize"></TextView>
        <TextView
            android:id="@+id/nic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nic"
            android:visibility="gone"
            android:textSize="@dimen/titlesize"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/riseiv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cd_sunrise"
                android:src="@mipmap/ic_rice"
                android:visibility="invisible"/>
        </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
            android:gravity="center"
        android:layout_weight="1">
        <TextView
            android:id="@+id/risetv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/risename"
            android:textSize="@dimen/data"
            android:visibility="invisible"/>

    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">
            <TextView
                android:id="@+id/risedatatv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/risedata"
                android:textSize="@dimen/data"
                android:visibility="invisible"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/setiv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cd_sunset"
                android:src="@mipmap/ic_set"
                android:visibility="invisible"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">
            <TextView
                android:id="@+id/settv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setname"
                android:textSize="@dimen/data"
                android:visibility="invisible"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">
            <TextView
                android:id="@+id/setdatatv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setdata"
                android:textSize="@dimen/data"
                android:visibility="invisible"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/duriv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cd_dur"
                android:src="@mipmap/ic_dur"
                android:visibility="invisible"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">
            <TextView
                android:id="@+id/durtv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/durname"
                android:textSize="@dimen/data"
                android:visibility="invisible"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">
            <TextView
                android:id="@+id/durdatatv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/durdata"
                android:textSize="@dimen/data"
                android:visibility="invisible"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
    </android.support.v7.widget.CardView>

    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
    android:id="@+id/calendarView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/cd_cdate"
    android:layout_weight="2"
    app:mcv_showOtherDates="all"
    app:mcv_arrowColor="@color/colorPrimary"
    app:mcv_selectionColor="@color/colorPrimary"
    android:visibility="invisible"/>
</LinearLayout>
</android.support.v4.widget.SwipeRefreshLayout>