<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/touch_selector_white"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="@dimen/widget_margin">

    <LinearLayout
        android:id="@+id/widget"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="4dp">

        <ImageView
            android:id="@+id/widget_sunrise_icon"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:contentDescription="@string/cd_sunrise_icon"
            tools:src="@mipmap/ic_rice" />

        <TextView
            android:id="@+id/widget_sunrisetv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif"
            android:textColor="@color/primary_text"
            tools:text="48" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/widget2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="4dp">

        <ImageView
            android:id="@+id/widget_sunset_icon"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:contentDescription="@string/cd_sunset_icon"
            tools:src="@mipmap/ic_set" />

        <TextView
            android:id="@+id/widget_sunsettv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif"
            android:textColor="@color/primary_text"
            tools:text="48" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/widget3"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="4dp">

        <ImageView
            android:id="@+id/widget_dur_icon"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:contentDescription="@string/cd_dur_icon"
            tools:src="@mipmap/ic_dur" />

        <TextView
            android:id="@+id/widget_durtv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif"
            android:textColor="@color/primary_text"
            tools:text="48" />
    </LinearLayout>
</LinearLayout>